--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,24 @@ dependencies {
 test {
     useTestNG()
 }
+
+task qa(type:Test){
+    useTestNG() {
+
+        def suite = System.getProperty('suite', '')
+
+        if (suite.equals('quick')) {
+            suites 'src/test/resources/quick.xml'
+        } else if (suite.equals('smoke')) {
+            suites 'src/test/resources/smoke.xml'
+        } else {
+            suites 'src/test/resources/testng.xml'
+        }
+    }
+
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+
+}
+
